deploy copy/infrastructure/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: swaroop
  labels:
    app: swaroop-formulation
